<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FirstAndroidView</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="image_content_description">Un Android avec un chien</string>
    <string name="create_account">Créer un compte</string>
    <string name="email">Adresse email</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Se connecter</string>
    <string name="title_activity_login_display">LoginDisplayActivity</string>
    <string name="title_activity_question1">Question 1</string>
    <string name="title_activity_question2">Question 2</string>
    <string name="title_activity_question3">Question 3</string>
    <string name="title_activity_question4">Question 4</string>
    <string name="hint_mail">"Ici : L'adresse email de l'utilisateur"</string>
    <string name="hint_pass">"Ici : Le mot de passe de l'utilisateur"</string>
    <string name="bouton_validation">bouton validation</string>
    <string name="StartQCM">Commencer</string>

    <string name="question1">Est-ce-que Damien est une salope ?</string>
    <string name="Q1Reponse1">oui</string>
    <string name="Q1Reponse2">une grosse salope</string>

    <string name="question2">Qui-sont les salopes dans le td ?</string>
    <string name="Q2Reponse1">Arnaud</string>
    <string name="Q2Reponse2">Clément</string>
    <string name="Q2Reponse3">Damien</string>
    <string name="Q2Reponse4">Pierre</string>

    <string name="question3">Damien est vraiment une salope.</string>
    <string name="bouton_vrai">Vrai</string>
    <string name="bouton_faux">Faux</string>

    <string name="question4">ce questionaire est bien ?</string>
    <string name="Q4Reponse1">oui ?</string>
    <string name="Q4Reponse2">éclaté au sol</string>


</resources>