<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.connect.question2">

    <TextView
        android:id="@+id/tvQuestion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/question2"
        app:layout_constraintBottom_toTopOf="@+id/ValiderQ2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ValiderQ2"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion1">

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q2Reponse1" />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q2Reponse2" />

        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Q2Reponse3" />

        <CheckBox
            android:id="@+id/checkbox4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/Q2Reponse4"/>

    </LinearLayout>

    <Button
        android:id="@+id/ValiderQ2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="valider"
        android:textColor="#FFFFFFFF"
        android:text="@string/bouton_validation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>