<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.connect.question1">

    <TextView
        android:id="@+id/tvQuestion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/question1"
        app:layout_constraintBottom_toTopOf="@+id/btnValiderQ4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnValiderQ4"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion1">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20sp">

            <RadioButton
                android:id="@+id/rbBlanc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q1Reponse1" />

            <RadioButton
                android:id="@+id/rbVertFluo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q1Reponse2" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btnValiderQ4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="valider"
        android:textColor="#FFFFFFFF"
        android:text="@string/bouton_validation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>