<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.connect.question3">

    <TextView
        android:id="@+id/tvQuestion3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/question3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion3"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="@dimen/layout_padding_top">

        <Button
            android:id="@+id/Vrai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="valider"
            android:text="@string/bouton_vrai"/>

        <Button
            android:id="@+id/Faux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="rejeter"
            android:text="@string/bouton_faux"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>